fix:  Swagger comment in the updateCustomer controller
